# kind

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  fmt.yml  test.yml
doc/: a-kind-introduction.md
kind_proc/: Cargo.toml
kind_proc/src/: lib.rs
src/: error.rs  id.rs  id_class.rs  id_enum.rs  ided.rs  identifiable.rs  jsonschema.rs  lib.rs  openapi.rs  postgres.rs  serde.rs  serde_serialize.rs
typid_derive/: Cargo.toml
typid_derive/src/: lib.rs
