[package]
name = "kind"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Costless typed identifiers backed by UUID, with kind readable in serialized versions"
keywords = ["serde", "sqlx", "type", "uuid"]
license = "MIT"
categories = ["rust-patterns"]
repository = "https://github.com/wingbackapp/kind"
readme = "README.md"

[features]
default = ["serde", "jsonschema"]
jsonschema = ["dep:schemars"]
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }
sqlx = { optional = true, version = "0.7", default-features = false, features = ["macros", "runtime-async-std-rustls", "postgres", "chrono", "json", "uuid"] }
kind_proc = { path = "kind_proc" }
utoipa = "4.2"
uuid = { version = "1.4", features = ["v4"] }
schemars = { optional = true, version = "0.8.16" }

[dev-dependencies]
serde_json = { version = "1.0" }
rstest = "0.18"
