[workspace]
resolver = "2"
members = ["kind_proc"]

[package]
name = "kind"
version = "1.0.0"
edition = "2021"
rust-version = "1.65"
description = "Costless typed identifiers backed by UUID, with kind readable in serialized versions"
keywords = ["serde", "sqlx", "type", "uuid"]
license = "MIT"
categories = ["rust-patterns"]
repository = "https://github.com/wingbackapp/kind"
readme = "README.md"

[features]
default = ["serde", "jsonschema", "openapi"]
jsonschema = ["dep:schemars"]
openapi = ["dep:utoipa"]
serde = ["dep:serde", "dep:serde_json"]
sqlx = ["dep:sqlx"]

[dependencies]
kind_proc = { path = "kind_proc", version = "1.0.0" }
schemars = { optional = true, version = "0.8.16" }
serde = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }
sqlx = { optional = true, version = "0.8", default-features = false, features = ["macros", "runtime-async-std-rustls", "postgres", "chrono", "json", "uuid"] }
utoipa = { optional = true, version = "4.2" }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
rstest = "0.18"
serde_json = { version = "1.0" }
